--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "homepage": "https://gitlab.com/france-atelier/eslint-config-backend#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ava": "^12.0.0",
     "eslint-plugin-jsonc": "^1.4.0",
-    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-security-node": "^1.0.14",
     "eslint-plugin-sonarjs": "^0.9.1",
-    "eslint-plugin-unicorn": "^34.0.1"
+    "eslint-plugin-unicorn": "^35.0.0"
   },
   "devDependencies": {
     "prettier": "^2.3.2"
