--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@france-atelier/eslint-config-backend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A simple ESLint configuration for Keybas projects (backend)",
   "main": "index.js",
   "files": [
@@ -24,14 +24,14 @@
   },
   "homepage": "https://gitlab.com/france-atelier/eslint-config-backend#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ava": "^12.0.0",
-    "eslint-plugin-jsonc": "^1.4.0",
+    "eslint-plugin-jsonc": "^1.5.0",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-security-node": "^1.0.14",
-    "eslint-plugin-sonarjs": "^0.9.1",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unicorn": "^35.0.0"
   },
   "devDependencies": {
